Footnotes: Allow notes to be placed into the current entry.
Setting org-footnote-section to nil now causes definitions to be
inserted at the end of the current outline node, instead of into a
special node names "Footnotes".

--- a/Changes.org
+++ b/Changes.org
@@ -98,7 +98,7 @@ convert them to numbered ones before export.  Thanks, Paul!
 Literal examples introduced with =#+BEGIN_EXAMPLE= or =#+BEGIN_SRC=
 do now allow optional line numbering in the example.
 Furthermore, links to specific code lines are supported, greatly
-increasing Org-mode utility for writing tutorials and other
+increasing Org-mode's utility for writing tutorials and other
 similar documents.
 
 Code references use special labels embedded directly into the
